A couple CSS tweaks to eliminate overlap and make sure all link is visible

--- a/modules/base/ext.echo.base.css
+++ b/modules/base/ext.echo.base.css
@@ -27,6 +27,5 @@ div.mw-echo-timestamp {
 	margin-top: 10px;
 	margin-bottom: 10px;
 	color: #252525;
-	height: 42px;
 	overflow: none;
 }
