--- a/modules/overlay/ext.echo.overlay.css
+++ b/modules/overlay/ext.echo.overlay.css
@@ -39,6 +39,7 @@
 }
 
 .mw-echo-overlay-link {
+	clear: left;
 	margin-left: 20px;
 }
 
